Refactor: 부스 예약 조회 관련 개선 (#291)
* Refactor: 날짜별 group by 조건 추가

* Add: 날짜와 시간 정보 반환하는 dto 추가

* Refactor: 날짜와 시간을 하나의 그룹으로 묶어서 응답

* Style: 코드 줄바꿈 추가

* Refactor: 일반 사용자 시점에서 applyUser 반환 null 값 처리

* chore: deploy 파일 변경

* chore: 권한 설정

* Chore: 주석 해제

* Add: 필드가 null 일 경우 처리 어노테이션 추가